# yarp

conf/: FindReadline.cmake  YarpFindDependencies.cmake  YarpIDL.cmake  YarpInstallationHelpers.cmake  YarpPlugin.cmake
conf/template/: placeGeneratedYarpIdlFiles.cmake.in
scripts/: yarp_completion
src/: CMakeLists.txt
src/carriers/: CMakeLists.txt
src/carriers/xxx_carrier/: CMakeLists.txt  XXXCarrier.cpp  XXXCarrier.h  XXXStream.cpp  XXXStream.h  xxx.ini
src/doc/: resource_finder_advanced.dox  yarp_yarp-config.dox
src/idls/thrift/tests/: CMakeLists.txt
src/idls/thrift/tests/demo/: main.cpp  wrapping.thrift
src/libYARP_OS/: CMakeLists.txt
src/libYARP_OS/harness/: ResourceFinderTest.cpp
src/libYARP_OS/include/yarp/os/: ResourceFinder.h
src/libYARP_OS/src/: Companion.cpp  ResourceFinder.cpp
src/libYARP_dev/: CMakeLists.txt
src/libYARP_dev/src/modules/ControlBoardWrapper/: CMakeLists.txt  ControlBoardWrapper.cpp  ControlBoardWrapper.h
src/yarp/: CMakeLists.txt  yarp.cpp  yarpcontext.cpp  yarpcontext.h  yarpcontextutils.cpp  yarpcontextutils.h  yarprobot.cpp  yarprobot.h
src/yarpmanager/libymanager/: CMakeLists.txt
src/yarpmanager/libymanager/include/: luabroker.h
